--- a/BookStore.CoreLibrary/CoreModel.tt
+++ b/BookStore.CoreLibrary/CoreModel.tt
@@ -1,7 +1,7 @@
 ﻿<#@ template language="C#" debug="false" hostspecific="true"#>
-<#@ include file="EF6.Utility.CS.ttinclude"#><#@ 
- output extension=".cs"#><#
-
+<#@ include file="EF6.Utility.CS.ttinclude"#>
+<#@ output extension=".cs"#>
+<#
 const string inputFile = @"CoreModel.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
@@ -281,16 +281,29 @@ public class CodeStringGenerator
         _ef = ef;
     }
 
+    private string Comments(Documentation documentation, string pad = "    ")
+    {
+        string comments = documentation != null
+            ? (string.IsNullOrEmpty(documentation.Summary)
+                ? ""
+                : "/// <summary>"+ Environment.NewLine + 
+                pad + "/// " + documentation.Summary.Replace("\n", Environment.NewLine + pad + "/// ") + Environment.NewLine +
+                pad + "/// </summary>" + Environment.NewLine + pad) : "";
+
+        return comments;
+    }
+
     public string Property(EdmProperty edmProperty)
     {
         return string.Format(
             CultureInfo.InvariantCulture,
-            "{0} {1} {2} {{ {3}get; {4}set; }}",
+            "{5}{0} {1} {2} {{ {3}get; {4}set; }}",
             Accessibility.ForProperty(edmProperty),
             _typeMapper.GetTypeName(edmProperty.TypeUsage),
             _code.Escape(edmProperty),
             _code.SpaceAfter(Accessibility.ForGetter(edmProperty)),
-            _code.SpaceAfter(Accessibility.ForSetter(edmProperty)));
+            _code.SpaceAfter(Accessibility.ForSetter(edmProperty)),
+			Comments(edmProperty.Documentation));
     }
 
     public string NavigationProperty(NavigationProperty navProp)
@@ -298,12 +311,13 @@ public class CodeStringGenerator
         var endType = _typeMapper.GetTypeName(navProp.ToEndMember.GetEntityType());
         return string.Format(
             CultureInfo.InvariantCulture,
-            "{0} {1} {2} {{ {3}get; {4}set; }}",
+            "{5}{0} {1} {2} {{ {3}get; {4}set; }}",
             AccessibilityAndVirtual(Accessibility.ForNavigationProperty(navProp)),
             navProp.ToEndMember.RelationshipMultiplicity == RelationshipMultiplicity.Many ? ("ICollection<" + endType + ">") : endType,
             _code.Escape(navProp),
             _code.SpaceAfter(Accessibility.ForGetter(navProp)),
-            _code.SpaceAfter(Accessibility.ForSetter(navProp)));
+            _code.SpaceAfter(Accessibility.ForSetter(navProp)),
+			Comments(navProp.Documentation));
     }
     
     public string AccessibilityAndVirtual(string accessibility)
@@ -313,13 +327,29 @@ public class CodeStringGenerator
     
     public string EntityClassOpening(EntityType entity)
     {
-        return string.Format(
+        string str = string.Format(
             CultureInfo.InvariantCulture,
-            "{0} {1}partial class {2}{3}",
+            "{4}{0} {1}partial class {2}{3}",
             Accessibility.ForType(entity),
             _code.SpaceAfter(_code.AbstractOption(entity)),
             _code.Escape(entity),
-            _code.StringBefore(" : ", _typeMapper.GetTypeName(entity.BaseType)));
+            _code.StringBefore(" : ", _typeMapper.GetTypeName(entity.BaseType)),
+			Comments(entity.Documentation, ""));
+
+		if(entity.Properties.Where(p => p.Name == "LogCreateDate").Any() && entity.Properties.Where(p => p.Name == "LogCreateUser").Any())
+		{
+			str += (!str.Contains(" : ") ? " : " : ", ") + "ILogCre";
+		}
+		if(entity.Properties.Where(p => p.Name == "LogUpdateDate").Any() && entity.Properties.Where(p => p.Name == "LogUpdateUser").Any())
+		{
+			str += (!str.Contains(" : ") ? " : " : ", ") + "ILogUp";
+		}
+		if(entity.Properties.Where(p => p.Name == "LogDeleteDate").Any() && entity.Properties.Where(p => p.Name == "LogDeleteUser").Any())
+		{
+			str += (!str.Contains(" : ") ? " : " : ", ") + "ILogDel";
+		}
+
+		return str;
     }
     
     public string EnumOpening(SimpleType enumType)
